--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
 		rel="stylesheet">
+	<link rel="preload" as="image" href="/assets/icons/Miniatura1.png" type="image/png">
 	<link rel="preload" as="image" href="/assets/icons/list.svg" type="image/svg+xml">
 	<link rel="preload" as="image" href="/assets/icons/close.svg" type="image/svg+xml">
 	<title>GraPhEr</title>
