--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
 <head>
 	<meta charset="UTF-8" />
 	<!-- <link rel="icon" type="image/svg+xml" sizes="512x512" href="/assets/icons/IconoGraPhEr_Circulo.svg" /> -->
-	<link rel="icon" type="image/x-icon" sizes="512x512" href="/public/favicon.ico" />
+	<link rel="icon" type="image/x-icon" sizes="512x512" href="/favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
 		rel="stylesheet">
-	<link rel="preload" as="image" href="/assets/icons/Miniatura1.png" type="image/png">
-	<link rel="preload" as="image" href="/assets/icons/list.svg" type="image/svg+xml">
-	<link rel="preload" as="image" href="/assets/icons/close.svg" type="image/svg+xml">
+
 	<title>GraPhEr</title>
 </head>
 
